syntax = "proto3";

package cloudnotes.proto;

import "common.proto";

option java_multiple_files = true;
option java_package = "cloudnotes.proto";
option java_outer_classname = "AdminPortalProto";

service AdminPortal {
  rpc talk (stream CommonMessage) returns (stream CommonMessage) {}
  rpc getValidId (EmptyMessage) returns (UserId) {}
  
  rpc createUser (User) returns (OperationStatus) {}
  rpc updateUser (User) returns (OperationStatus) {}
  
  rpc getUser (UserId) returns (User) {}
  rpc getAllUsers (EmptyMessage) returns (UsersCollection) {}
  
  rpc deleteUser (UserId) returns (OperationStatus) {}
}

message HelloRequest {
  string message = 1;
}

message HelloReply {
  string message = 1;
}

message UserData {
  string name = 1;
}

message UserId {
  int32 value = 1;
}

message User {
  UserData data = 1;
  UserId id = 2;
}

message UsersCollection {
  repeated User values = 1;
}